# dwgo

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  config.status  configure  configure.in  dwgo.conf
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
img_source/: base.xcf  default.xcf  rain.xcf  snow_flake_1.xcf
pixmaps/: Makefile  Makefile.am  Makefile.in  brk.xpm  clear.xpm  clouds.xpm  default.xpm  dust.xpm  fog.xpm  hail.xpm  main.xpm  parts.xpm  rain.xpm  snow.xpm  tcu.xpm
src/: Makefile  Makefile.am  Makefile.in  MySock.cpp  MySock.h  XDraw.cpp  XDraw.h  config.h  config.h.in  dwgo.cpp  dwgo.h  errors.cpp  errors.h  localtemp.cpp  localtemp.h  strutils.cpp
src/.deps/: MySock.Po  XDraw.Po  dwgo.Po  errors.Po  localtemp.Po
